[package]
name = "morce"
version = "0.0.1"
edition = "2021"
authors = ["Ali Aghaahmadi <itsaliaghaahmadi@gmail.com>"]
description = "A safe, secure and light messenger"
license = "MIT OR Apache-2.0"
keywords = ["messenger", "rust"]
categories = ["network-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4.39", default-features = false, features = ["alloc", "std", "clock", "now"]}
broccli = "0.0.11"
orbyte = "0.0.3"
