[package]
name = "morce"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-ws = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = { version = "1", features = ["serde"] }
dashmap = "6.1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"
anyhow = "1"