[package]
name = "morce"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-ws = "0.4.0"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
dashmap = "6.1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"
base64 = "0.22.1"